--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link type="text/css" rel="stylesheet" href="public/css/spectre.min.css" />
-    <link rel="stylesheet" href="public/css/main.css" />
+    <link type="text/css" rel="stylesheet" href="/public/css/spectre.min.css" />
+    <link rel="stylesheet" href="/public/css/main.css" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
