--- a/app/Views/public.twig
+++ b/app/Views/public.twig
@@ -2,23 +2,23 @@
 
 {% block content %}
     <div class="title">
-        <h2>{{ state }} posts</h2>
+        <h2>Public posts</h2>
     </div>
     <div class="columns container">
         {% for post in posts %}
             <div class="column col-6 card">
                 <div class="lightgray">
                     <div class="card-header">
-                        <h4 class="card-title">{{ post.username }}</h4>
-                        <h6 class="card-subtitle">Written by: {{ user.id }}</h6>
+                        <h4 class="card-title">{{ post.title }}</h4>
+                        <h6 class="card-subtitle">Written by: {{ post.user.username }}</h6>
                     </div>
                     <div class="divider"></div>
                 </div>
                 <div class="card-body">
-                    <p>{{ user.password }}</p>
+                    <p>{{ post.text }}</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn">Read more</a>
+                    <a href="/public-posts/{{ post.slug }}" class="btn">Read more</a>
                 </div>
             </div>
         {% endfor %}
