--- a/app/Views/login.twig
+++ b/app/Views/login.twig
@@ -8,10 +8,10 @@
             </div>
             <form action="/login" method="post">
                 <div class="form-group">
-                    <label class="form-label" for="email-login">Email</label>
-                    <input class="form-input" type="email"
-                           id="email-login" name="email"
-                           placeholder="Email" />
+                    <label class="form-label" for="username-login">Username</label>
+                    <input class="form-input" type="text"
+                           id="username-login" name="username"
+                           placeholder="Username" />
                 </div>
                 <div class="form-group">
                     <label class="form-label" for="password-login">Password</label>
@@ -30,6 +30,12 @@
                 <h2>Sign up</h2>
             </div>
             <form action="/signup" method="post">
+                <div class="form-group">
+                    <label class="form-label" for="username-signup">Username</label>
+                    <input class="form-input" type="text"
+                           id="username-signup" name="username"
+                           placeholder="Username" />
+                </div>
                 <div class="form-group">
                     <label class="form-label" for="email-signup">Email</label>
                     <input class="form-input" type="email"
