--- a/app/Views/post.twig
+++ b/app/Views/post.twig
@@ -8,7 +8,7 @@
             <h2>{{ post.title }}</h2>
         </div>
         <div class="post-text">
-            <p>{{ post.text }}</p>
+            <p>{{ post.text | raw }}</p>
         </div>
         <cite>
             Written by: {{ post.user.username }}
